@@ -4,6 +4,8 @@ apache2 (2.4.20-2) UNRELEASED; urgency=medium
     Closes: #820824
   * Fix race condition and logical error in init script. Thanks to Thomas
     Stangner for the patch. Closes: #822144
+  * Remove links to manpages.debian.org in default index.html to avoid
+    broken robots doing a DoS on the site. Closes: #821313
 
  -- Stefan Fritsch <sf@debian.org>  Sat, 28 May 2016 10:58:26 +0200
 
